name:                asteroids
version:             0.1.0.0
author:              Fabian Rutten & Olaf Boekholt
maintainer:          Fabian Rutten & Olaf Boekholt
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable asteroids
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       Cabal
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
  default-language:    Haskell2010