name:               Asteroids
version:            0.1.0.0
author:             Fabian Rutten & Olaf Boekholt
maintainer:         o.w.boekholt@students.uu.nl
category:           Game
build-type:         Simple
cabal-version:      >=1.10


executable asteroids
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       directory,
                       Cabal
  hs-source-dirs:      app
  other-modules:       Controller
                     , Model
                     , View
                     , Tick
                     , Collision
                     , Random
                     , Animation
  default-language:    Haskell2010